# lucia_slam_navigation

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lucia_cartographer/share/lucia_cartographer/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lucia_cartographer/share/lucia_cartographer/cmake/: lucia_cartographerConfig.cmake
install/lucia_cartographer/share/lucia_cartographer/launch/: urg_node2_cartographer.launch.py
install/lucia_slam/share/lucia_slam/: local_setup.sh  package.dsv  package.ps1  package.sh
install/lucia_slam/share/lucia_slam/cmake/: lucia_slamConfig.cmake
install/lucia_slam/share/lucia_slam/launch/: robot_bringup.launch.py  slam.launch.py
log/: latest_build
lucia/: CMakeLists.txt  package.xml
lucia_bringup/: package.xml
lucia_bringup/launch/: lucia_state_publisher.launch.py  robot.launch.py  rviz2.launch.py
lucia_bringup/param/: lucia.yaml
lucia_cartographer/: CMakeLists.txt
lucia_cartographer/config/: urg_cartographer.lua
lucia_cartographer/launch/: urg_node2_cartographer.launch.py
lucia_description/: CMakeLists.txt  package.xml
lucia_description/urdf/: lucia.urdf
lucia_navigation2/: CMakeLists.txt  package.xml
lucia_navigation2/launch/: navigation2.launch.py
lucia_node/: CMakeLists.txt  package.xml
lucia_node/include/lucia_node/: control_table.hpp  diff_drive_controller.hpp  lucia.hpp  odometry.hpp
lucia_node/include/lucia_node/sensors/: joint_state.hpp  sensor_stae.hpp
lucia_node/pram/: lucia.yaml
lucia_node/src/: diff_drive_controller.cpp  lucia.cpp  node_main.cpp  odometry.cpp
lucia_node/src/sensors/: joint_state.cpp
lucia_slam/: CMakeLists.txt  package.xml
lucia_slam/install/: local_setup.sh  setup.sh
lucia_slam/launch/: description.launch.py
lucia_slam/log/: latest_build
lucia_teleop/: setup.py
lucia_teleop/lucia_teleop/script/: teleop_keyboard.py
(+8 files in other folders)
