<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lucia_description</name>
  <version>1.0.0</version>
  <description>
    ROS 2 launch scripts for starting the Lucia
  </description>
  <maintainer email="haruki.isono861@gmail.com">Haruki Isono</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
 <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>